# YASNE

./: CMakeLists.txt  README.md
client/: Makefile  client  client.cpp
server/: Makefile  server  server.cpp
src/: Client.cpp  Client.h  Server.cpp  Server.h  Wrapper.h
src/Backend/: Client.cpp  Client.h  Server.cpp  Server.h  Wrapper.h
src/Client/: client.cpp
src/Server/: server.cpp
